--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.4.1",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
