--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^5.1.6",
     "@clerk/nextjs": "^6.14.1",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@t3-oss/env-nextjs": "^0.12.0",
+    "@tanstack/react-query": "^5.74.4",
     "framer-motion": "^12.6.3",
     "gsap": "^3.12.7",
     "i18next": "^24.2.3",
@@ -25,6 +27,7 @@
     "react-i18next": "^15.4.1",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
+    "svix": "^1.64.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
