--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "i18next-http-backend": "^3.0.2",
     "next": "^15.2.5",
     "react": "^19.0.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.4.1",
     "react-slick": "^0.30.3",
