--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@clerk/nextjs": "^6.14.1",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.74.4",
     "framer-motion": "^12.6.3",
+    "googleapis": "^148.0.0",
     "gsap": "^3.12.7",
     "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^8.0.4",
@@ -24,9 +26,12 @@
     "next": "^15.2.5",
     "react": "^19.0.0",
     "react-colorful": "^5.6.1",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.4.1",
+    "react-markdown": "^10.1.0",
     "react-slick": "^0.30.3",
+    "remark-breaks": "^4.0.0",
     "slick-carousel": "^1.8.1",
     "svix": "^1.64.1",
     "zod": "^3.24.2"
