--- a/package.json
+++ b/package.json
@@ -17,17 +17,21 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.74.4",
+    "better-sqlite3": "^11.9.1",
     "framer-motion": "^12.6.3",
     "googleapis": "^148.0.0",
     "gsap": "^3.12.7",
+    "html5-qrcode": "^2.3.8",
     "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^8.0.4",
     "i18next-http-backend": "^3.0.2",
     "next": "^15.2.5",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-colorful": "^5.6.1",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-i18next": "^15.4.1",
     "react-markdown": "^10.1.0",
     "react-slick": "^0.30.3",
