--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/clerk-sdk-node": "^5.1.6",
     "@clerk/nextjs": "^6.14.1",
+    "@designbycode/tailwindcss-text-stroke": "^1.3.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
@@ -18,6 +19,7 @@
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.74.4",
     "better-sqlite3": "^11.9.1",
+    "canvas-confetti": "^1.9.3",
     "framer-motion": "^12.6.3",
     "googleapis": "^148.0.0",
     "gsap": "^3.12.7",
