--- a/package.json
+++ b/package.json
@@ -18,6 +18,13 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.74.4",
+    "@tiptap/extension-color": "^2.12.0",
+    "@tiptap/extension-link": "^2.12.0",
+    "@tiptap/extension-text-style": "^2.12.0",
+    "@tiptap/extension-underline": "^2.12.0",
+    "@tiptap/pm": "^2.12.0",
+    "@tiptap/react": "^2.12.0",
+    "@tiptap/starter-kit": "^2.12.0",
     "better-sqlite3": "^11.9.1",
     "canvas-confetti": "^1.9.3",
     "framer-motion": "^12.6.3",
@@ -32,6 +39,7 @@
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-slick": "^0.30.3",
     "remark-breaks": "^4.0.0",
