--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-slick": "^0.30.3",
     "remark-breaks": "^4.0.0",
     "slick-carousel": "^1.8.1",
+    "ssh2-sftp-client": "^12.0.0",
     "svix": "^1.64.1",
     "zod": "^3.24.2"
   },
